// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateColors > clamps chroma for a near-gray accent 1`] = `
{
  "dark": {
    "accent": {
      "default": "oklch(72.00% 0.069 0)",
      "hover": "oklch(80.33% 0.05 0)",
    },
    "background": {
      "app": "oklch(22.00% 0.005 0)",
      "elevated": "oklch(22.00% 0.005 0)",
      "muted": "oklch(30.33% 0.007 0)",
      "popover": "oklch(22.00% 0.005 0)",
      "subtle": "oklch(30.33% 0.007 0)",
      "surface": "oklch(22.00% 0.005 0)",
    },
    "border": {
      "default": "oklch(47.00% 0.013 0)",
      "focus": "oklch(55.33% 0.08 0)",
      "strong": "oklch(55.33% 0.015 0)",
    },
    "code": {
      "addition": "var(--var-ui-color-palette-teal-4)",
      "additionBackground": "var(--var-ui-color-palette-emerald-10)",
      "attr": "var(--var-ui-color-palette-amber-4)",
      "base": "var(--var-ui-color-palette-gray-3)",
      "builtIn": "var(--var-ui-color-palette-orange-4)",
      "bullet": "var(--var-ui-color-palette-amber-5)",
      "comment": "var(--var-ui-color-palette-gray-4)",
      "deletion": "var(--var-ui-color-palette-red-4)",
      "deletionBackground": "var(--var-ui-color-palette-red-10)",
      "keyword": "var(--var-ui-color-palette-violet-4)",
      "name": "var(--var-ui-color-palette-red-4)",
      "section": "var(--var-ui-color-palette-indigo-4)",
      "string": "var(--var-ui-color-palette-teal-4)",
      "title": "var(--var-ui-color-palette-blue-4)",
    },
    "danger": {
      "default": "oklch(72.00% 0.181 27)",
      "solid": "oklch(47.00% 0.189 27)",
    },
    "info": {
      "default": "oklch(72.00% 0.189 294)",
      "onSolid": "oklch(100% 0 0)",
    },
    "link": {
      "default": "oklch(72.00% 0.069 0)",
      "hover": "oklch(80.33% 0.05 0)",
    },
    "overlay": {
      "default": "color-mix(in oklch, oklch(97.00% 0.002 0) 70%, transparent)",
      "panel": "oklch(22.00% 0.005 0)",
    },
    "success": {
      "default": "oklch(72.00% 0.163 145)",
      "solid": "oklch(47.00% 0.171 145)",
    },
    "text": {
      "onAccent": "oklch(22.00% 0.005 0)",
      "onDanger": "oklch(100% 0 0)",
      "onInfo": "oklch(100% 0 0)",
      "onSuccess": "oklch(100% 0 0)",
      "onWarning": "oklch(97.00% 0.002 0)",
      "primary": "oklch(97.00% 0.002 0)",
      "secondary": "oklch(72.00% 0.013 0)",
    },
    "warning": {
      "default": "oklch(72.00% 0.146 72)",
      "onSolid": "oklch(97.00% 0.002 0)",
    },
  },
  "light": {
    "accent": {
      "default": "oklch(47.00% 0.072 0)",
      "hover": "oklch(38.67% 0.054 0)",
    },
    "background": {
      "app": "oklch(97.00% 0.002 0)",
      "elevated": "oklch(97.00% 0.002 0)",
      "muted": "oklch(88.67% 0.005 0)",
      "popover": "oklch(97.00% 0.002 0)",
      "subtle": "oklch(88.67% 0.005 0)",
      "surface": "oklch(97.00% 0.002 0)",
    },
    "border": {
      "default": "oklch(72.00% 0.013 0)",
      "focus": "oklch(63.67% 0.08 0)",
      "strong": "oklch(63.67% 0.015 0)",
    },
    "code": {
      "addition": "var(--var-ui-color-palette-teal-6)",
      "additionBackground": "var(--var-ui-color-palette-emerald-1)",
      "attr": "var(--var-ui-color-palette-amber-6)",
      "base": "var(--var-ui-color-palette-gray-10)",
      "builtIn": "var(--var-ui-color-palette-orange-6)",
      "bullet": "var(--var-ui-color-palette-amber-6)",
      "comment": "var(--var-ui-color-palette-gray-5)",
      "deletion": "var(--var-ui-color-palette-red-6)",
      "deletionBackground": "var(--var-ui-color-palette-red-1)",
      "keyword": "var(--var-ui-color-palette-purple-6)",
      "name": "var(--var-ui-color-palette-red-6)",
      "section": "var(--var-ui-color-palette-indigo-6)",
      "string": "var(--var-ui-color-palette-teal-6)",
      "title": "var(--var-ui-color-palette-blue-6)",
    },
    "danger": {
      "default": "oklch(47.00% 0.189 27)",
      "solid": "oklch(38.67% 0.143 27)",
    },
    "info": {
      "default": "oklch(47.00% 0.198 294)",
      "onSolid": "oklch(100% 0 0)",
    },
    "link": {
      "default": "oklch(47.00% 0.072 0)",
      "hover": "oklch(38.67% 0.054 0)",
    },
    "overlay": {
      "default": "color-mix(in oklch, oklch(22.00% 0.005 0) 55%, transparent)",
      "panel": "oklch(97.00% 0.002 0)",
    },
    "success": {
      "default": "oklch(47.00% 0.171 145)",
      "solid": "oklch(38.67% 0.129 145)",
    },
    "text": {
      "onAccent": "oklch(100% 0 0)",
      "onDanger": "oklch(100% 0 0)",
      "onInfo": "oklch(100% 0 0)",
      "onSuccess": "oklch(100% 0 0)",
      "onWarning": "oklch(22.00% 0.005 0)",
      "primary": "oklch(22.00% 0.005 0)",
      "secondary": "oklch(47.00% 0.013 0)",
    },
    "warning": {
      "default": "oklch(47.00% 0.153 72)",
      "onSolid": "oklch(22.00% 0.005 0)",
    },
  },
}
`;

exports[`generateColors > returns color-shaped light and dark for the default accent 1`] = `
{
  "dark": {
    "accent": {
      "default": "oklch(72.00% 0.176 258.81008101651366)",
      "hover": "oklch(80.33% 0.127 258.81008101651366)",
    },
    "background": {
      "app": "oklch(22.00% 0.005 258.81008101651366)",
      "elevated": "oklch(22.00% 0.005 258.81008101651366)",
      "muted": "oklch(30.33% 0.007 258.81008101651366)",
      "popover": "oklch(22.00% 0.005 258.81008101651366)",
      "subtle": "oklch(30.33% 0.007 258.81008101651366)",
      "surface": "oklch(22.00% 0.005 258.81008101651366)",
    },
    "border": {
      "default": "oklch(47.00% 0.013 258.81008101651366)",
      "focus": "oklch(55.33% 0.205 258.81008101651366)",
      "strong": "oklch(55.33% 0.015 258.81008101651366)",
    },
    "code": {
      "addition": "var(--var-ui-color-palette-teal-4)",
      "additionBackground": "var(--var-ui-color-palette-emerald-10)",
      "attr": "var(--var-ui-color-palette-amber-4)",
      "base": "var(--var-ui-color-palette-gray-3)",
      "builtIn": "var(--var-ui-color-palette-orange-4)",
      "bullet": "var(--var-ui-color-palette-amber-5)",
      "comment": "var(--var-ui-color-palette-gray-4)",
      "deletion": "var(--var-ui-color-palette-red-4)",
      "deletionBackground": "var(--var-ui-color-palette-red-10)",
      "keyword": "var(--var-ui-color-palette-violet-4)",
      "name": "var(--var-ui-color-palette-red-4)",
      "section": "var(--var-ui-color-palette-indigo-4)",
      "string": "var(--var-ui-color-palette-teal-4)",
      "title": "var(--var-ui-color-palette-blue-4)",
    },
    "danger": {
      "default": "oklch(72.00% 0.181 27)",
      "solid": "oklch(47.00% 0.189 27)",
    },
    "info": {
      "default": "oklch(72.00% 0.189 294)",
      "onSolid": "oklch(100% 0 0)",
    },
    "link": {
      "default": "oklch(72.00% 0.176 258.81008101651366)",
      "hover": "oklch(80.33% 0.127 258.81008101651366)",
    },
    "overlay": {
      "default": "color-mix(in oklch, oklch(97.00% 0.002 258.81008101651366) 70%, transparent)",
      "panel": "oklch(22.00% 0.005 258.81008101651366)",
    },
    "success": {
      "default": "oklch(72.00% 0.163 145)",
      "solid": "oklch(47.00% 0.171 145)",
    },
    "text": {
      "onAccent": "oklch(22.00% 0.005 258.81008101651366)",
      "onDanger": "oklch(100% 0 0)",
      "onInfo": "oklch(100% 0 0)",
      "onSuccess": "oklch(100% 0 0)",
      "onWarning": "oklch(97.00% 0.002 258.81008101651366)",
      "primary": "oklch(97.00% 0.002 258.81008101651366)",
      "secondary": "oklch(72.00% 0.013 258.81008101651366)",
    },
    "warning": {
      "default": "oklch(72.00% 0.146 72)",
      "onSolid": "oklch(97.00% 0.002 258.81008101651366)",
    },
  },
  "light": {
    "accent": {
      "default": "oklch(47.00% 0.184 258.81008101651366)",
      "hover": "oklch(38.67% 0.139 258.81008101651366)",
    },
    "background": {
      "app": "oklch(97.00% 0.002 258.81008101651366)",
      "elevated": "oklch(97.00% 0.002 258.81008101651366)",
      "muted": "oklch(88.67% 0.005 258.81008101651366)",
      "popover": "oklch(97.00% 0.002 258.81008101651366)",
      "subtle": "oklch(88.67% 0.005 258.81008101651366)",
      "surface": "oklch(97.00% 0.002 258.81008101651366)",
    },
    "border": {
      "default": "oklch(72.00% 0.013 258.81008101651366)",
      "focus": "oklch(63.67% 0.205 258.81008101651366)",
      "strong": "oklch(63.67% 0.015 258.81008101651366)",
    },
    "code": {
      "addition": "var(--var-ui-color-palette-teal-6)",
      "additionBackground": "var(--var-ui-color-palette-emerald-1)",
      "attr": "var(--var-ui-color-palette-amber-6)",
      "base": "var(--var-ui-color-palette-gray-10)",
      "builtIn": "var(--var-ui-color-palette-orange-6)",
      "bullet": "var(--var-ui-color-palette-amber-6)",
      "comment": "var(--var-ui-color-palette-gray-5)",
      "deletion": "var(--var-ui-color-palette-red-6)",
      "deletionBackground": "var(--var-ui-color-palette-red-1)",
      "keyword": "var(--var-ui-color-palette-purple-6)",
      "name": "var(--var-ui-color-palette-red-6)",
      "section": "var(--var-ui-color-palette-indigo-6)",
      "string": "var(--var-ui-color-palette-teal-6)",
      "title": "var(--var-ui-color-palette-blue-6)",
    },
    "danger": {
      "default": "oklch(47.00% 0.189 27)",
      "solid": "oklch(38.67% 0.143 27)",
    },
    "info": {
      "default": "oklch(47.00% 0.198 294)",
      "onSolid": "oklch(100% 0 0)",
    },
    "link": {
      "default": "oklch(47.00% 0.184 258.81008101651366)",
      "hover": "oklch(38.67% 0.139 258.81008101651366)",
    },
    "overlay": {
      "default": "color-mix(in oklch, oklch(22.00% 0.005 258.81008101651366) 55%, transparent)",
      "panel": "oklch(97.00% 0.002 258.81008101651366)",
    },
    "success": {
      "default": "oklch(47.00% 0.171 145)",
      "solid": "oklch(38.67% 0.129 145)",
    },
    "text": {
      "onAccent": "oklch(100% 0 0)",
      "onDanger": "oklch(100% 0 0)",
      "onInfo": "oklch(100% 0 0)",
      "onSuccess": "oklch(100% 0 0)",
      "onWarning": "oklch(22.00% 0.005 258.81008101651366)",
      "primary": "oklch(22.00% 0.005 258.81008101651366)",
      "secondary": "oklch(47.00% 0.013 258.81008101651366)",
    },
    "warning": {
      "default": "oklch(47.00% 0.153 72)",
      "onSolid": "oklch(22.00% 0.005 258.81008101651366)",
    },
  },
}
`;

exports[`generateColors > returns themes for a saturated pink accent 1`] = `
{
  "dark": {
    "accent": {
      "default": "oklch(72.00% 0.225 356.9447697294126)",
      "hover": "oklch(80.33% 0.162 356.9447697294126)",
    },
    "background": {
      "app": "oklch(22.00% 0.005 356.9447697294126)",
      "elevated": "oklch(22.00% 0.005 356.9447697294126)",
      "muted": "oklch(30.33% 0.007 356.9447697294126)",
      "popover": "oklch(22.00% 0.005 356.9447697294126)",
      "subtle": "oklch(30.33% 0.007 356.9447697294126)",
      "surface": "oklch(22.00% 0.005 356.9447697294126)",
    },
    "border": {
      "default": "oklch(47.00% 0.013 356.9447697294126)",
      "focus": "oklch(55.33% 0.261 356.9447697294126)",
      "strong": "oklch(55.33% 0.015 356.9447697294126)",
    },
    "code": {
      "addition": "var(--var-ui-color-palette-teal-4)",
      "additionBackground": "var(--var-ui-color-palette-emerald-10)",
      "attr": "var(--var-ui-color-palette-amber-4)",
      "base": "var(--var-ui-color-palette-gray-3)",
      "builtIn": "var(--var-ui-color-palette-orange-4)",
      "bullet": "var(--var-ui-color-palette-amber-5)",
      "comment": "var(--var-ui-color-palette-gray-4)",
      "deletion": "var(--var-ui-color-palette-red-4)",
      "deletionBackground": "var(--var-ui-color-palette-red-10)",
      "keyword": "var(--var-ui-color-palette-violet-4)",
      "name": "var(--var-ui-color-palette-red-4)",
      "section": "var(--var-ui-color-palette-indigo-4)",
      "string": "var(--var-ui-color-palette-teal-4)",
      "title": "var(--var-ui-color-palette-blue-4)",
    },
    "danger": {
      "default": "oklch(72.00% 0.181 27)",
      "solid": "oklch(47.00% 0.189 27)",
    },
    "info": {
      "default": "oklch(72.00% 0.189 294)",
      "onSolid": "oklch(100% 0 0)",
    },
    "link": {
      "default": "oklch(72.00% 0.225 356.9447697294126)",
      "hover": "oklch(80.33% 0.162 356.9447697294126)",
    },
    "overlay": {
      "default": "color-mix(in oklch, oklch(97.00% 0.002 356.9447697294126) 70%, transparent)",
      "panel": "oklch(22.00% 0.005 356.9447697294126)",
    },
    "success": {
      "default": "oklch(72.00% 0.163 145)",
      "solid": "oklch(47.00% 0.171 145)",
    },
    "text": {
      "onAccent": "oklch(22.00% 0.005 356.9447697294126)",
      "onDanger": "oklch(100% 0 0)",
      "onInfo": "oklch(100% 0 0)",
      "onSuccess": "oklch(100% 0 0)",
      "onWarning": "oklch(97.00% 0.002 356.9447697294126)",
      "primary": "oklch(97.00% 0.002 356.9447697294126)",
      "secondary": "oklch(72.00% 0.013 356.9447697294126)",
    },
    "warning": {
      "default": "oklch(72.00% 0.146 72)",
      "onSolid": "oklch(97.00% 0.002 356.9447697294126)",
    },
  },
  "light": {
    "accent": {
      "default": "oklch(47.00% 0.235 356.9447697294126)",
      "hover": "oklch(38.67% 0.178 356.9447697294126)",
    },
    "background": {
      "app": "oklch(97.00% 0.002 356.9447697294126)",
      "elevated": "oklch(97.00% 0.002 356.9447697294126)",
      "muted": "oklch(88.67% 0.005 356.9447697294126)",
      "popover": "oklch(97.00% 0.002 356.9447697294126)",
      "subtle": "oklch(88.67% 0.005 356.9447697294126)",
      "surface": "oklch(97.00% 0.002 356.9447697294126)",
    },
    "border": {
      "default": "oklch(72.00% 0.013 356.9447697294126)",
      "focus": "oklch(63.67% 0.261 356.9447697294126)",
      "strong": "oklch(63.67% 0.015 356.9447697294126)",
    },
    "code": {
      "addition": "var(--var-ui-color-palette-teal-6)",
      "additionBackground": "var(--var-ui-color-palette-emerald-1)",
      "attr": "var(--var-ui-color-palette-amber-6)",
      "base": "var(--var-ui-color-palette-gray-10)",
      "builtIn": "var(--var-ui-color-palette-orange-6)",
      "bullet": "var(--var-ui-color-palette-amber-6)",
      "comment": "var(--var-ui-color-palette-gray-5)",
      "deletion": "var(--var-ui-color-palette-red-6)",
      "deletionBackground": "var(--var-ui-color-palette-red-1)",
      "keyword": "var(--var-ui-color-palette-purple-6)",
      "name": "var(--var-ui-color-palette-red-6)",
      "section": "var(--var-ui-color-palette-indigo-6)",
      "string": "var(--var-ui-color-palette-teal-6)",
      "title": "var(--var-ui-color-palette-blue-6)",
    },
    "danger": {
      "default": "oklch(47.00% 0.189 27)",
      "solid": "oklch(38.67% 0.143 27)",
    },
    "info": {
      "default": "oklch(47.00% 0.198 294)",
      "onSolid": "oklch(100% 0 0)",
    },
    "link": {
      "default": "oklch(47.00% 0.235 356.9447697294126)",
      "hover": "oklch(38.67% 0.178 356.9447697294126)",
    },
    "overlay": {
      "default": "color-mix(in oklch, oklch(22.00% 0.005 356.9447697294126) 55%, transparent)",
      "panel": "oklch(97.00% 0.002 356.9447697294126)",
    },
    "success": {
      "default": "oklch(47.00% 0.171 145)",
      "solid": "oklch(38.67% 0.129 145)",
    },
    "text": {
      "onAccent": "oklch(100% 0 0)",
      "onDanger": "oklch(100% 0 0)",
      "onInfo": "oklch(100% 0 0)",
      "onSuccess": "oklch(100% 0 0)",
      "onWarning": "oklch(22.00% 0.005 356.9447697294126)",
      "primary": "oklch(22.00% 0.005 356.9447697294126)",
      "secondary": "oklch(47.00% 0.013 356.9447697294126)",
    },
    "warning": {
      "default": "oklch(47.00% 0.153 72)",
      "onSolid": "oklch(22.00% 0.005 356.9447697294126)",
    },
  },
}
`;
